Add color reduction

--- a/cfg/CamPub.cfg
+++ b/cfg/CamPub.cfg
@@ -7,6 +7,9 @@ gen = ParameterGenerator()
 
 gen.add("resize",                  double_t, 0, "Resize factor", 1, 0.1, 1)
 
+gen.add("enable_less_color",       bool_t,   0, "Enable color reduction", False)
+gen.add("less_color_mux",          double_t, 0, "Color reduction amount", 1, 0.0, 10.0)
+
 gen.add("enable_clahe",            bool_t,   0, "Enable CLAHE Dynamic Contrast Adjust", False)
 gen.add("clahe_clip",              int_t,    0, "CLAHE Clip Limit", 2, 1, 4)
 
